# openclaw-voice

./: .gitignore  .plan.md  AGENTS.md  CLAUDE.md  PLAN.md  README.md
scripts/: run_all.sh
ui/JarvisOverlay/: Package.swift
ui/JarvisOverlay/Sources/: ConstellationView.swift  ContentView.swift  JarvisOverlayApp.swift  MicrophoneLevelMonitor.swift  OverlayViewModel.swift  RingView.swift  VoiceEngine.swift
ui/JarvisOverlay/Tests/: CLIArgsTests.swift
voice/: pyproject.toml  slice0.py
voice/scripts/: probe_gateway.py
voice/src/: __init__.py  config.py  state.py  tts.py  ui_socket.py  vad.py
voice/tests/: __init__.py
voice/tests/unit/: __init__.py  test_state.py  test_tts.py  test_ui_socket.py  test_vad.py
